k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-blog-service
  namespace: default
spec:
  selector:
    app: django-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: default
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
